# darija-llm-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  template.py  tune.py
config/: config.yaml  new_tokens.json
notebook/: data_ingestion.ipynb  datasets_for_tokenizer.ipynb  test-data-ingestion-for-sft-and-dapt.ipynb  test-model-loader.ipynb  test_data_ingestion.ipynb  tokenizer_training.ipynb
src/darija_llm_lab/components/: model_loader.py  model_trainer.py
src/darija_llm_lab/components/data_ingestion/: __init__.py  data_ingestion.py  dataset_factory.py  dataset_strategy.py  ingestion.py
src/darija_llm_lab/components/data_ingestion/strategies/: __init__.py  base.py  huggingface.py  local.py
src/darija_llm_lab/config/: configuration.py
src/darija_llm_lab/entity/: config_entity.py  entity.py
src/darija_llm_lab/pipeline/: dapt_pipeline.py  sft_pipeline.py
src/darija_llm_lab/utils/: common.py  utils.py
