[project]
name = "darija-llm-lab"
version = "0.1.0"
description = "Fine-tuning and evaluating LLMs for Moroccan Darija. From small to large models, this project aims to improve Darija NLP, contribute open tools, and explore future research directions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "peft>=0.16.0",
    "pip>=25.1.1",
    "timm>=1.0.17",
    "transformers>=4.53.3",
    "trl==0.14.0",
]
